# Twitch-Channel-Points-Miner

./: Dockerfile  README.md  compose.yaml  develop-compose.yaml  example.py  minimal-run.py  pyproject.toml
.github/actions/: deploy-action.yml  get-version-action.yml
.github/actions/deploy/: action.yml
.github/actions/get-version/: action.yml
.github/workflows/: check-version.yml  deploy-docker-from-repository-dispatch.yml  deploy-docker-manually.yml  deploy-docker.yml  release.yml  test.yml
TwitchChannelPointsMiner/: TwitchChannelPointsMiner.py  __init__.py  constants.py  logger.py
TwitchChannelPointsMiner/classes/: AnalyticsServer.py  Anonymiser.py  Chat.py  ClientSession.py  PubSub.py  Settings.py  StreamerSelector.py  Twitch.py  TwitchLogin.py
TwitchChannelPointsMiner/classes/entities/: Campaign.py  Drop.py  EventPrediction.py  Stream.py  Streamer.py
TwitchChannelPointsMiner/classes/gql/: Integration.py
TwitchChannelPointsMiner/classes/gql/data/: Parser.py
TwitchChannelPointsMiner/classes/gql/data/response/: ChannelPointsContext.py  ChatRoomBanStatus.py  Error.py  RewardList.py  WithIsStreamLiveQuery.py
TwitchChannelPointsMiner/classes/websocket/hermes/: Client.py  Pool.py
TwitchChannelPointsMiner/classes/websocket/pubsub/: Client.py  Pool.py
TwitchChannelPointsMiner/utils/: AttemptStrategy.py  LimitedSet.py  Utils.py
assets/: charts.html
docs/guides/: advanced-configuration.md  advanced-usage.md  analytics.md  development.md  getting-started.md  logs.md
tests/: streamer_selector_tests.py  streamer_tests.py  utils_tests.py
tests/classes/: test_anonymiser.py  test_streamer_selector.py
tests/classes/entities/: test_campaign.py
tests/classes/gql/: test_parser.py
tests/utils/: test_utils.py
tests/utils_tests/: limited_set_tests.py
