[project]
name = "twitch-channel-points-miner"
version = "1.1.0"
description = "Automatically collects Twitch channel points"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "emoji>=2.15.0",
    "flask>=3.1.3",
    "irc>=20.5.0",
    "millify>=0.1.1",
    "pandas>=3.0.2",
    "pre-commit>=4.6.0",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2026.1.post1",
    "requests>=2.33.1",
    "validators>=0.35.0",
    "websocket-client>=1.9.0",
    "werkzeug>=3.1.6",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pygments>=2.20.0",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
addopts = "-s tests"
filterwarnings = [
    # Millify has some syntax warnings but still works
    'ignore::SyntaxWarning:.*millify.*'
]

[tool.pyright]
venv = ".venv"
venvPath = "."
